# servedsmart.top

./: .gitignore  .gitmodules  LICENSE  README.md  ai-prompts.md  eslint.config.mjs  package-lock.json  package.json  wrangler.toml
.github/scripts/: deploy-cloudflare-api.sh  install-dependency-pup.sh
.github/scripts/deploy-cloudflare-api/: deploy-cloudflare-api.conf  deploy-cloudflare-api.go  deploy-cloudflare-api.sh  gen-requirements.sh  go.mod  go.sum  pyproject.toml  requirements.txt
.github/workflows/: deploy-cloudflare-pages.yml  deploy-cloudflare.yml
archetypes/default/: index.de.md  index.en.md
assets/css/: consent.css
assets/js/: appearance.js  consent-appearance.js  consent-variables.js  consent.js  edit-cms-sveltia.js  medium-zoom.js  ol-sp.js  sveltia-cms.js
assets/json/: edit-cms-config.json
config/_default/: hugo.toml  languages.de.toml  languages.en.toml  menus.de.toml  menus.en.toml  params.toml
content/: _index.de.md  _index.en.md
content/edit-cms/: index.de.md  index.en.md
content/employees/: _index.de.md  _index.en.md
content/examples/: _index.de.md  _index.en.md
content/food/: _index.de.md  _index.en.md
content/posts/: _index.de.md  _index.en.md
content/services/: _index.de.md  _index.en.md
content/terms/: _index.de.md  _index.en.md
data/de/: consent.toml
data/en/: consent.toml
graphics/palette/: palette-served-smart.css
i18n/: de.toml  en.toml
layouts/_default/: baseof.html
scripts/: author.sh  favicon.sh  sveltia-cms-config.sh  sveltia-cms.conf  sveltia-cms.sh  update-deps.sh
static/: .assetsignore  _headers
(+133 files in other folders)
