[project]
name = "deploy-cloudflare-api"
version = "1.0.0"
#description = ""
#authors = [
#    {name = "Your Name",email = "you@example.com"}
#]
#license = {text = "MIT"}
#readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "yq (>=3.4.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
